// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component should render avatar component 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#f4ab34",
      "borderRadius": 40,
      "height": 40,
      "justifyContent": "center",
      "width": 40,
    }
  }
>
  <Image
    accessibilityHint=""
    accessibilityLabel=""
    size="standard"
    source={
      Object {
        "testUri": "../../../src/assets/images/anonymous.jpg",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 40,
          "height": 40,
          "width": 40,
        },
      ]
    }
    testID="avatar"
    theme={
      Object {
        "body1": Object {
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0.51,
        },
        "body2": Object {
          "fontSize": 14,
          "fontWeight": 400,
          "letterSpacing": 0.22,
        },
        "borderRadius": Object {
          "large": 8,
          "medium": 4,
          "none": 0,
          "small": 2,
        },
        "button": Object {
          "default": Object {
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 1.23,
            "lineHeight": 1.5,
          },
        },
        "caption": Object {
          "fontSize": 12,
          "fontWeight": 400,
          "letterSpacing": 0.38,
        },
        "color": Object {
          "alert": "#e74627",
          "background": "#fafafa",
          "highEmphasis": "#333333",
          "highlight": "#000000",
          "link": "#227bbd",
          "lowEmphasis": "#bbbbbb",
          "mediumEmphasis": "#777777",
          "onAlert": "#ffffff",
          "onBackground": "#333333",
          "onLink": "#ffffff",
          "onPrimary": "#333333",
          "onPrimaryDark": "#333333",
          "onPrimaryLight": "#333333",
          "onSecondary": "#000000",
          "onSecondaryDark": "#000000",
          "onSecondaryLight": "#000000",
          "onSuccess": "#ffffff",
          "onSurface": "#333333",
          "onWarning": "#333333",
          "primary": "#f4ab34",
          "primaryDark": "#ef8426",
          "primaryLight": "#fefde8",
          "secondary": "#ff6b0b",
          "secondaryDark": "#ff5808",
          "secondaryLight": "#fff8e1",
          "success": "#569a32",
          "surface": "#ffffff",
          "warning": "#fcc433",
        },
        "elevation": Object {
          "huge": Object {
            "elevation": 12,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 12,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 17,
          },
          "hugeX": Object {
            "elevation": 16,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 16,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 24,
          },
          "hugeXX": Object {
            "elevation": 24,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 24,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 38,
          },
          "large": Object {
            "elevation": 6,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 6,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 10,
          },
          "largeX": Object {
            "elevation": 8,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 8,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 10,
          },
          "largeXX": Object {
            "elevation": 9,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 9,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 12,
          },
          "medium": Object {
            "elevation": 4,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 4,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 5,
          },
          "micro": Object {
            "elevation": 1,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 1,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 1,
          },
          "none": Object {
            "elevation": 0,
            "shadowColor": "nil",
            "shadowOffsetHeight": -3,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0,
            "shadowRadius": 3,
          },
          "small": Object {
            "elevation": 3,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 3,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 4,
          },
          "tiny": Object {
            "elevation": 2,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 2,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 2,
          },
        },
        "heading1": Object {
          "fontSize": 96,
          "fontWeight": 400,
          "letterSpacing": 0,
        },
        "heading2": Object {
          "fontSize": 60,
          "fontWeight": 400,
          "letterSpacing": 0,
        },
        "heading3": Object {
          "fontSize": 48,
          "fontWeight": 400,
          "letterSpacing": 0,
        },
        "heading4": Object {
          "fontSize": 34,
          "fontWeight": 400,
          "letterSpacing": 0.27,
        },
        "heading5": Object {
          "fontSize": 24,
          "fontWeight": 400,
          "letterSpacing": 0,
        },
        "heading6": Object {
          "fontSize": 20,
          "fontWeight": 500,
          "letterSpacing": 0.24,
        },
        "opacity": Object {
          "disabled": 0.32,
          "disabledLow": 0.24,
          "high": 0.64,
          "low": 0.12,
          "lower": 0.04,
          "medium": 0.48,
          "mediumHigh": 0.56,
          "mediumLow": 0.16,
          "opaque": 1,
          "transparent": 0,
          "veryLow": 0.08,
        },
        "overline": Object {
          "fontSize": 12,
          "fontWeight": 500,
          "letterSpacing": 1.92,
        },
        "size": Object {
          "huge": 96,
          "hugeX": 128,
          "hugeXX": 144,
          "hugeXXX": 192,
          "large": 64,
          "largeX": 72,
          "largeXX": 80,
          "largeXXX": 88,
          "medium": 48,
          "mediumX": 56,
          "micro": 4,
          "none": 0,
          "semi": 32,
          "semiX": 40,
          "small": 16,
          "standard": 24,
          "tiny": 8,
          "veryHuge": 256,
        },
        "spacing": Object {
          "large": 48,
          "micro": 4,
          "none": 0,
          "semi": 32,
          "small": 16,
          "standard": 24,
          "tiny": 8,
          "xLarge": 64,
        },
        "subtitle1": Object {
          "fontSize": 16,
          "fontWeight": 500,
          "letterSpacing": 0.13,
        },
        "subtitle2": Object {
          "fontSize": 14,
          "fontWeight": 500,
          "letterSpacing": 0.11,
        },
        "typography": Object {
          "fontFamily": Object {
            "branding": "Helvetica Now",
            "code": "Roboto Mono",
            "primary": "Roboto",
            "secondary": "sans-serif",
          },
          "fontWeight": Object {
            "medium": 500,
            "regular": 400,
          },
          "lineHeight": Object {
            "large": 2,
            "medium": 1.5,
            "reset": 1,
            "small": 1.25,
          },
        },
      }
    }
    type="anonymous"
  />
</View>
`;

exports[`Avatar component should render avatar component anonymous 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#f4ab34",
      "borderRadius": 40,
      "height": 40,
      "justifyContent": "center",
      "width": 40,
    }
  }
>
  <Image
    accessibilityHint=""
    accessibilityLabel=""
    size="standard"
    source={
      Object {
        "testUri": "../../../src/assets/images/anonymous.jpg",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 40,
          "height": 40,
          "width": 40,
        },
      ]
    }
    testID="avatar"
    theme={
      Object {
        "body1": Object {
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0.51,
        },
        "body2": Object {
          "fontSize": 14,
          "fontWeight": 400,
          "letterSpacing": 0.22,
        },
        "borderRadius": Object {
          "large": 8,
          "medium": 4,
          "none": 0,
          "small": 2,
        },
        "button": Object {
          "default": Object {
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 1.23,
            "lineHeight": 1.5,
          },
        },
        "caption": Object {
          "fontSize": 12,
          "fontWeight": 400,
          "letterSpacing": 0.38,
        },
        "color": Object {
          "alert": "#e74627",
          "background": "#fafafa",
          "highEmphasis": "#333333",
          "highlight": "#000000",
          "link": "#227bbd",
          "lowEmphasis": "#bbbbbb",
          "mediumEmphasis": "#777777",
          "onAlert": "#ffffff",
          "onBackground": "#333333",
          "onLink": "#ffffff",
          "onPrimary": "#333333",
          "onPrimaryDark": "#333333",
          "onPrimaryLight": "#333333",
          "onSecondary": "#000000",
          "onSecondaryDark": "#000000",
          "onSecondaryLight": "#000000",
          "onSuccess": "#ffffff",
          "onSurface": "#333333",
          "onWarning": "#333333",
          "primary": "#f4ab34",
          "primaryDark": "#ef8426",
          "primaryLight": "#fefde8",
          "secondary": "#ff6b0b",
          "secondaryDark": "#ff5808",
          "secondaryLight": "#fff8e1",
          "success": "#569a32",
          "surface": "#ffffff",
          "warning": "#fcc433",
        },
        "elevation": Object {
          "huge": Object {
            "elevation": 12,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 12,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 17,
          },
          "hugeX": Object {
            "elevation": 16,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 16,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 24,
          },
          "hugeXX": Object {
            "elevation": 24,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 24,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 38,
          },
          "large": Object {
            "elevation": 6,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 6,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 10,
          },
          "largeX": Object {
            "elevation": 8,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 8,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 10,
          },
          "largeXX": Object {
            "elevation": 9,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 9,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 12,
          },
          "medium": Object {
            "elevation": 4,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 4,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 5,
          },
          "micro": Object {
            "elevation": 1,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 1,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 1,
          },
          "none": Object {
            "elevation": 0,
            "shadowColor": "nil",
            "shadowOffsetHeight": -3,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0,
            "shadowRadius": 3,
          },
          "small": Object {
            "elevation": 3,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 3,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 4,
          },
          "tiny": Object {
            "elevation": 2,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 2,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 2,
          },
        },
        "heading1": Object {
          "fontSize": 96,
          "fontWeight": 400,
          "letterSpacing": 0,
        },
        "heading2": Object {
          "fontSize": 60,
          "fontWeight": 400,
          "letterSpacing": 0,
        },
        "heading3": Object {
          "fontSize": 48,
          "fontWeight": 400,
          "letterSpacing": 0,
        },
        "heading4": Object {
          "fontSize": 34,
          "fontWeight": 400,
          "letterSpacing": 0.27,
        },
        "heading5": Object {
          "fontSize": 24,
          "fontWeight": 400,
          "letterSpacing": 0,
        },
        "heading6": Object {
          "fontSize": 20,
          "fontWeight": 500,
          "letterSpacing": 0.24,
        },
        "opacity": Object {
          "disabled": 0.32,
          "disabledLow": 0.24,
          "high": 0.64,
          "low": 0.12,
          "lower": 0.04,
          "medium": 0.48,
          "mediumHigh": 0.56,
          "mediumLow": 0.16,
          "opaque": 1,
          "transparent": 0,
          "veryLow": 0.08,
        },
        "overline": Object {
          "fontSize": 12,
          "fontWeight": 500,
          "letterSpacing": 1.92,
        },
        "size": Object {
          "huge": 96,
          "hugeX": 128,
          "hugeXX": 144,
          "hugeXXX": 192,
          "large": 64,
          "largeX": 72,
          "largeXX": 80,
          "largeXXX": 88,
          "medium": 48,
          "mediumX": 56,
          "micro": 4,
          "none": 0,
          "semi": 32,
          "semiX": 40,
          "small": 16,
          "standard": 24,
          "tiny": 8,
          "veryHuge": 256,
        },
        "spacing": Object {
          "large": 48,
          "micro": 4,
          "none": 0,
          "semi": 32,
          "small": 16,
          "standard": 24,
          "tiny": 8,
          "xLarge": 64,
        },
        "subtitle1": Object {
          "fontSize": 16,
          "fontWeight": 500,
          "letterSpacing": 0.13,
        },
        "subtitle2": Object {
          "fontSize": 14,
          "fontWeight": 500,
          "letterSpacing": 0.11,
        },
        "typography": Object {
          "fontFamily": Object {
            "branding": "Helvetica Now",
            "code": "Roboto Mono",
            "primary": "Roboto",
            "secondary": "sans-serif",
          },
          "fontWeight": Object {
            "medium": 500,
            "regular": 400,
          },
          "lineHeight": Object {
            "large": 2,
            "medium": 1.5,
            "reset": 1,
            "small": 1.25,
          },
        },
      }
    }
    type="anonymous"
  />
</View>
`;

exports[`Avatar component should render avatar component image 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#f4ab34",
      "borderRadius": 40,
      "height": 40,
      "justifyContent": "center",
      "width": 40,
    }
  }
>
  <Image
    accessibilityHint=""
    accessibilityLabel=""
    size="standard"
    style={
      Array [
        Object {
          "borderRadius": 40,
          "height": 40,
          "width": 40,
        },
      ]
    }
    testID="avatar"
    theme={
      Object {
        "body1": Object {
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0.51,
        },
        "body2": Object {
          "fontSize": 14,
          "fontWeight": 400,
          "letterSpacing": 0.22,
        },
        "borderRadius": Object {
          "large": 8,
          "medium": 4,
          "none": 0,
          "small": 2,
        },
        "button": Object {
          "default": Object {
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 1.23,
            "lineHeight": 1.5,
          },
        },
        "caption": Object {
          "fontSize": 12,
          "fontWeight": 400,
          "letterSpacing": 0.38,
        },
        "color": Object {
          "alert": "#e74627",
          "background": "#fafafa",
          "highEmphasis": "#333333",
          "highlight": "#000000",
          "link": "#227bbd",
          "lowEmphasis": "#bbbbbb",
          "mediumEmphasis": "#777777",
          "onAlert": "#ffffff",
          "onBackground": "#333333",
          "onLink": "#ffffff",
          "onPrimary": "#333333",
          "onPrimaryDark": "#333333",
          "onPrimaryLight": "#333333",
          "onSecondary": "#000000",
          "onSecondaryDark": "#000000",
          "onSecondaryLight": "#000000",
          "onSuccess": "#ffffff",
          "onSurface": "#333333",
          "onWarning": "#333333",
          "primary": "#f4ab34",
          "primaryDark": "#ef8426",
          "primaryLight": "#fefde8",
          "secondary": "#ff6b0b",
          "secondaryDark": "#ff5808",
          "secondaryLight": "#fff8e1",
          "success": "#569a32",
          "surface": "#ffffff",
          "warning": "#fcc433",
        },
        "elevation": Object {
          "huge": Object {
            "elevation": 12,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 12,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 17,
          },
          "hugeX": Object {
            "elevation": 16,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 16,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 24,
          },
          "hugeXX": Object {
            "elevation": 24,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 24,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 38,
          },
          "large": Object {
            "elevation": 6,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 6,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 10,
          },
          "largeX": Object {
            "elevation": 8,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 8,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 10,
          },
          "largeXX": Object {
            "elevation": 9,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 9,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 12,
          },
          "medium": Object {
            "elevation": 4,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 4,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 5,
          },
          "micro": Object {
            "elevation": 1,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 1,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 1,
          },
          "none": Object {
            "elevation": 0,
            "shadowColor": "nil",
            "shadowOffsetHeight": -3,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0,
            "shadowRadius": 3,
          },
          "small": Object {
            "elevation": 3,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 3,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 4,
          },
          "tiny": Object {
            "elevation": 2,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 2,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 2,
          },
        },
        "heading1": Object {
          "fontSize": 96,
          "fontWeight": 400,
          "letterSpacing": 0,
        },
        "heading2": Object {
          "fontSize": 60,
          "fontWeight": 400,
          "letterSpacing": 0,
        },
        "heading3": Object {
          "fontSize": 48,
          "fontWeight": 400,
          "letterSpacing": 0,
        },
        "heading4": Object {
          "fontSize": 34,
          "fontWeight": 400,
          "letterSpacing": 0.27,
        },
        "heading5": Object {
          "fontSize": 24,
          "fontWeight": 400,
          "letterSpacing": 0,
        },
        "heading6": Object {
          "fontSize": 20,
          "fontWeight": 500,
          "letterSpacing": 0.24,
        },
        "opacity": Object {
          "disabled": 0.32,
          "disabledLow": 0.24,
          "high": 0.64,
          "low": 0.12,
          "lower": 0.04,
          "medium": 0.48,
          "mediumHigh": 0.56,
          "mediumLow": 0.16,
          "opaque": 1,
          "transparent": 0,
          "veryLow": 0.08,
        },
        "overline": Object {
          "fontSize": 12,
          "fontWeight": 500,
          "letterSpacing": 1.92,
        },
        "size": Object {
          "huge": 96,
          "hugeX": 128,
          "hugeXX": 144,
          "hugeXXX": 192,
          "large": 64,
          "largeX": 72,
          "largeXX": 80,
          "largeXXX": 88,
          "medium": 48,
          "mediumX": 56,
          "micro": 4,
          "none": 0,
          "semi": 32,
          "semiX": 40,
          "small": 16,
          "standard": 24,
          "tiny": 8,
          "veryHuge": 256,
        },
        "spacing": Object {
          "large": 48,
          "micro": 4,
          "none": 0,
          "semi": 32,
          "small": 16,
          "standard": 24,
          "tiny": 8,
          "xLarge": 64,
        },
        "subtitle1": Object {
          "fontSize": 16,
          "fontWeight": 500,
          "letterSpacing": 0.13,
        },
        "subtitle2": Object {
          "fontSize": 14,
          "fontWeight": 500,
          "letterSpacing": 0.11,
        },
        "typography": Object {
          "fontFamily": Object {
            "branding": "Helvetica Now",
            "code": "Roboto Mono",
            "primary": "Roboto",
            "secondary": "sans-serif",
          },
          "fontWeight": Object {
            "medium": 500,
            "regular": 400,
          },
          "lineHeight": Object {
            "large": 2,
            "medium": 1.5,
            "reset": 1,
            "small": 1.25,
          },
        },
      }
    }
    type="image"
  />
</View>
`;

exports[`Avatar component should render avatar component letter 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#f4ab34",
      "borderRadius": 40,
      "height": 40,
      "justifyContent": "center",
      "width": 40,
    }
  }
>
  <Text
    accessibilityHint=""
    accessibilityLabel=""
    accessibilityRole="text"
    size="standard"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#333333",
          "fontSize": 16,
          "letterSpacing": 1,
        },
      ]
    }
    testID="avatar"
    theme={
      Object {
        "body1": Object {
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0.51,
        },
        "body2": Object {
          "fontSize": 14,
          "fontWeight": 400,
          "letterSpacing": 0.22,
        },
        "borderRadius": Object {
          "large": 8,
          "medium": 4,
          "none": 0,
          "small": 2,
        },
        "button": Object {
          "default": Object {
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 1.23,
            "lineHeight": 1.5,
          },
        },
        "caption": Object {
          "fontSize": 12,
          "fontWeight": 400,
          "letterSpacing": 0.38,
        },
        "color": Object {
          "alert": "#e74627",
          "background": "#fafafa",
          "highEmphasis": "#333333",
          "highlight": "#000000",
          "link": "#227bbd",
          "lowEmphasis": "#bbbbbb",
          "mediumEmphasis": "#777777",
          "onAlert": "#ffffff",
          "onBackground": "#333333",
          "onLink": "#ffffff",
          "onPrimary": "#333333",
          "onPrimaryDark": "#333333",
          "onPrimaryLight": "#333333",
          "onSecondary": "#000000",
          "onSecondaryDark": "#000000",
          "onSecondaryLight": "#000000",
          "onSuccess": "#ffffff",
          "onSurface": "#333333",
          "onWarning": "#333333",
          "primary": "#f4ab34",
          "primaryDark": "#ef8426",
          "primaryLight": "#fefde8",
          "secondary": "#ff6b0b",
          "secondaryDark": "#ff5808",
          "secondaryLight": "#fff8e1",
          "success": "#569a32",
          "surface": "#ffffff",
          "warning": "#fcc433",
        },
        "elevation": Object {
          "huge": Object {
            "elevation": 12,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 12,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 17,
          },
          "hugeX": Object {
            "elevation": 16,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 16,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 24,
          },
          "hugeXX": Object {
            "elevation": 24,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 24,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 38,
          },
          "large": Object {
            "elevation": 6,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 6,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 10,
          },
          "largeX": Object {
            "elevation": 8,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 8,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 10,
          },
          "largeXX": Object {
            "elevation": 9,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 9,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 12,
          },
          "medium": Object {
            "elevation": 4,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 4,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 5,
          },
          "micro": Object {
            "elevation": 1,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 1,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 1,
          },
          "none": Object {
            "elevation": 0,
            "shadowColor": "nil",
            "shadowOffsetHeight": -3,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0,
            "shadowRadius": 3,
          },
          "small": Object {
            "elevation": 3,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 3,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 4,
          },
          "tiny": Object {
            "elevation": 2,
            "shadowColor": "#000000",
            "shadowOffsetHeight": 2,
            "shadowOffsetWidth": 0,
            "shadowOpacity": 0.14,
            "shadowRadius": 2,
          },
        },
        "heading1": Object {
          "fontSize": 96,
          "fontWeight": 400,
          "letterSpacing": 0,
        },
        "heading2": Object {
          "fontSize": 60,
          "fontWeight": 400,
          "letterSpacing": 0,
        },
        "heading3": Object {
          "fontSize": 48,
          "fontWeight": 400,
          "letterSpacing": 0,
        },
        "heading4": Object {
          "fontSize": 34,
          "fontWeight": 400,
          "letterSpacing": 0.27,
        },
        "heading5": Object {
          "fontSize": 24,
          "fontWeight": 400,
          "letterSpacing": 0,
        },
        "heading6": Object {
          "fontSize": 20,
          "fontWeight": 500,
          "letterSpacing": 0.24,
        },
        "opacity": Object {
          "disabled": 0.32,
          "disabledLow": 0.24,
          "high": 0.64,
          "low": 0.12,
          "lower": 0.04,
          "medium": 0.48,
          "mediumHigh": 0.56,
          "mediumLow": 0.16,
          "opaque": 1,
          "transparent": 0,
          "veryLow": 0.08,
        },
        "overline": Object {
          "fontSize": 12,
          "fontWeight": 500,
          "letterSpacing": 1.92,
        },
        "size": Object {
          "huge": 96,
          "hugeX": 128,
          "hugeXX": 144,
          "hugeXXX": 192,
          "large": 64,
          "largeX": 72,
          "largeXX": 80,
          "largeXXX": 88,
          "medium": 48,
          "mediumX": 56,
          "micro": 4,
          "none": 0,
          "semi": 32,
          "semiX": 40,
          "small": 16,
          "standard": 24,
          "tiny": 8,
          "veryHuge": 256,
        },
        "spacing": Object {
          "large": 48,
          "micro": 4,
          "none": 0,
          "semi": 32,
          "small": 16,
          "standard": 24,
          "tiny": 8,
          "xLarge": 64,
        },
        "subtitle1": Object {
          "fontSize": 16,
          "fontWeight": 500,
          "letterSpacing": 0.13,
        },
        "subtitle2": Object {
          "fontSize": 14,
          "fontWeight": 500,
          "letterSpacing": 0.11,
        },
        "typography": Object {
          "fontFamily": Object {
            "branding": "Helvetica Now",
            "code": "Roboto Mono",
            "primary": "Roboto",
            "secondary": "sans-serif",
          },
          "fontWeight": Object {
            "medium": 500,
            "regular": 400,
          },
          "lineHeight": Object {
            "large": 2,
            "medium": 1.5,
            "reset": 1,
            "small": 1.25,
          },
        },
      }
    }
    type="letter"
  >
    
  </Text>
</View>
`;
